# hs24-mc2-dmnkf

./: .gitignore  README.md  hpc_fs24_mc2_teil1.py  hpc_fs24_mc2_teil2.ipynb  hpc_fs24_mc2_teil2.py  multiprocessing_svd.py  profile_multiple.py  profile_optimized.py  profile_optimized_fused.py  profile_optimized_fused_padding.py  profile_optimized_v1.py  profile_optimized_v2.py  profile_shared_memory.py  pyproject.toml  remaining_exercises.py  teil2-eng.ipynb  teil2-eng.py
profiles/: multiple_profile.ncu-rep  optimized_profile_fused.ncu-rep  optimized_profile_fused.nsys-rep  optimized_profile_fused_padding.ncu-rep  optimized_profile_original.ncu-rep  optimized_profile_original.nsys-rep  optimized_profile_v1.ncu-rep  optimized_profile_v2.ncu-rep
resources/: Profile_Example_CUDA.py
