[project]
name = "hs24-mc2-dmnkf"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "imageio>=2.35.1",
    "numba>=0.60.0",
    "matplotlib>=3.9.4",
    "scikit-image>=0.24.0",
    "ipykernel>=6.29.5",
    "nibabel>=5.2.1",
    "cupy-cuda11x>=13.3.0",
    "jupytext>=1.16.4",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "graphviz>=0.20.3",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/hs24_mc2_dmnkf"]
